--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,47 +4,47 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:eNmwLwTgjJYLlKuYJQupbnU8LWf99t30bWYbltjhrD5eCJwX3t/Qi99Ff1bPnabxwonUCj9IdmSKIIfAHSCaeqI=,iv:FV/SsbaOYbfrBQH9pbTXMTWRzIlLEtfrlo1vNE7rb64=,tag:ULTeQlqq7lcXqovu+8RbEQ==,type:comment]
-    #ENC[AES256_GCM,data:aJ48VBbEeGcdHD+1asMg2HK0eT/D78E/etQWCCcQFy9VrnT8pL+uPIdVYCo=,iv:Yt6lJgecSbxTYYYExKqlu8Plkd0FojHcabxLQm2QK/Y=,tag:9/yx+9QKAILcWdzzUYLTDw==,type:comment]
-    VIP: ENC[AES256_GCM,data:cNbwxBN5gnT0CCLBow==,iv:wxvZrdJ9o11Ugdt0/Wn/gMZYtr8014Vv7MOdzLaExK4=,tag:b+tg6PaMSdMF5gfE+8/Jaw==,type:str]
-    #ENC[AES256_GCM,data:HxeF7zzqChxsJBR5TuHtwkyqsYST4pkyAsXE,iv:AlNvJAsEKSZ6Iez12WXBFASx+kKz9ybo19hqyqZ/P8c=,tag:HYcOETfCv7lNeKEjVM114A==,type:comment]
-    #ENC[AES256_GCM,data:cDjS0efwY+ceAnJpCcNtwv4XXzqb651yKwUg9SdNQ7UPXG3TLherSNdp05Z+vcK0q3w4az0cB0S73wsldUsEVqGlRpX5ZX0JcLTkUJ9+S2Kj3cxt0oq47zk=,iv:hXzFdXRWGlj0s1jhxZbGeG9dr9tExHHBRloVlDo8ZkM=,tag:TDwIK8ACgK+B3hqOICuBQA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:Gnso6tgMUGejFik+Bj4=,iv:plZrtK6Mt3YUzAm80r/f5gnJUqNVA+EyHgcntTfYnjk=,tag:F60JazUGE+0++1tsRiXoeQ==,type:str]
-    #ENC[AES256_GCM,data:IjtWueKRDyhkNVKxLZSTfk2BESDEVDtN0o/D6oFxX/0CEw==,iv:JYRvxVZrOwBbsnHoFg+Yn2Wsb6OHFjxFtUwQN4Uwa6k=,tag:KbHq/6vF/8YKzYtBJx3cCg==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:USn05Ldm9EmzsjBLww==,iv:9TYijODvIIKn/PzquL5h76sKmktc/eIf+apV3g3y0P4=,tag:T1B2Vg58grJwbMnbY/C+SQ==,type:str]
-    #ENC[AES256_GCM,data:ny1SA7fHSe+sblXGyETbdzQ2MfIYmsGukrAKW5nEpDXaPRzx+IMWTmIAaikjY/Q=,iv:tTCl4arHO/rFshrClzf4uDm4BLPYC6BPXbVEEh1syw8=,tag:hcoHxxWAyIa6dpyVnBJ94Q==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:EdmsEEn2LXmp8p3xsQAqtRS0omVLAk8G0sSR4R5ODw==,iv:O+9yHxLsIBiLKqKPIDn6tr2y3RzYYMMAXQf8rvG+BH0=,tag:hSULbJiovqJT38rnZFWXcQ==,type:str]
-    #ENC[AES256_GCM,data:5YjwwfRHYUstJXeg8sicDiPXakmvquGIlZ0W9yGKdjKkc7RgmdpNzekASJmeUqD/A6tW6fa/XwOiIkWj4DP+GytFUTLj32qXLC2/SWHVAo5INg==,iv:KDltBRgXH/4fBu81TvYf/WL+E8Es4O3BtrYGcJYa2cI=,tag:f6kMz+5doSUQcUWO11tWIA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:Czx8/LMP0bL+3MMA7qp3,iv:vDjIbtr7RTAvnBijP0oIeLCOnTa9Mfit7ulQ3qJQ0xQ=,tag:wyk9gRQaW3LOooCHCCKZdw==,type:str]
-    #ENC[AES256_GCM,data:xvyC7QVRLSas6RzX4FdiS82fJEQtPehrSNefR2Z1UqTf,iv:XmYgcoVJvTerVrS9cXH6ptKYz17BukCXGcOoWXWjCoo=,tag:bO58c/Ibp0pOZ3QALiPRwg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:3NcxUuh7VcMlytPglUki,iv:0uIMPIp9/1hDbITNtUii5k3En1vZsNzX3xSqIvoSvmw=,tag:uYb54bdIMF6ofRErAcPVFw==,type:str]
-    #ENC[AES256_GCM,data:kHihAlIa8AX+Nk8q4eTP0sSExlCsZqA/fLOPMlc176Tlkl4Z0PBcGIYe9gkA1I4fTuGrN0UuAu4RQyH6+urCyk/l7rmBKIl+XbVZi0dB54o=,iv:UD1la865z9uaAM3fThGEGereYV2TQYc4goku3/iyqIs=,tag:M7ljXdEreBb7LvhQ2O2GyQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:xXR1s2Pwd4L9iAEZEFDB,iv:JP3zLUhOPaRIg8i7CXxB3SwtjHEe2aqjcBtUs71ipfQ=,tag:e4SWzfkWWMCTjAJbaNaGyQ==,type:str]
-    #ENC[AES256_GCM,data:Ko9MDlR62xl19LHNYTYdhogHK4thg6K5wbWwC3Y/JaVIkabKYFNxOgrRZLSagz6EqaVgZnzU/Zijps0pWS34VQJAnmvcZaQLwoUldl2D8rj3sQZxknHM,iv:DKGXKY3jtwZQo/48jIHFdDJm1i0xL/nAKFgiGXfSaXc=,tag:l13jjGFUgD2GB6/7T3JiMQ==,type:comment]
-    #ENC[AES256_GCM,data:VkQpX+u1cbak9Ft30aOLZPvj94Ypvaae2iMCe8uMOWEzhGXmMNKibuK6iaQkRpJ67noDbVtodfrsZE0wVEko5Pr7kYBHTsUPADOP6C/X9pni/O0F/J9NIXqKw4ILnhEAWXo/HZok800K7xN3AJJ7nISbdwN0Zvyi/C7gZA==,iv:U1yNVXtPcTSSlyksgIW2Rx0jb6wFdITRR+FedtIJ8Do=,tag:pP51dnwHyPvGhNLFJwm/4Q==,type:comment]
-    #ENC[AES256_GCM,data:Ri+IdbZQEt64v+UtS8USrE0HbvDOBlirCqfZBXfJqwM2sPoB7wBIPoxLh1hw6uJ9u6gfrEi1YxRRxfpHBPpjZe3D/2fPrCpTEb6Zg0gTSII=,iv:uuZnzV5W3p7VcIZqBIz4oj3s6Zuj2369/ZXq7AGH+J4=,tag:TQaY+IX2LWZwQm321XbMaQ==,type:comment]
-    #ENC[AES256_GCM,data:44B0AbhrNs2bpjAvED1LOqCkaQwPsT8OKxt9eDaQ4I5Azsi3AMmhBhpGKEIwfs+1yBXGKsmL,iv:iBNfEcFJWb0kW3qBD6Z8W/acqCiUx91XAgCkMYeUcAg=,tag:IrWtNrVpk1SDJmkV0lKK7A==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:U5PLW/25AuRJ1NtZ,iv:qmOUwRibEdpxbfiobX9uNoVFtbCDxp7k9usj1yGeRzE=,tag:E2ESci4+kRolLfmDsoy7qg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:QNT31gKOxbLi+FGpaeRiAqw=,iv:taINvsq1UYqvnCensbP5ryZfmKmbRlP1ndV7IbmjRVw=,tag:oyd9TWm7mxqNrJdByYRTkw==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:hOZNByTnAqniBSqDSheY3TE1ZH1nabi8wO+yjgKTBIM=,iv:+/kojX+RTirpwMV2geaZ0zjzZQ6S7qsblccfXQM4oW4=,tag:VAy4BkR7XJ12uHEE4JIwxQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:rQz0QQLhsH7g3MZxBFXNJ0t7pZehJjMnSH9swcwvMHB1dKpubmdKDQ==,iv:yr9v1L8BnmFHZbTsx9lsN++5XkqEP95OTBx8ZyzLdX8=,tag:jrX94ffE+TUImsBph1EGVw==,type:str]
-    #ENC[AES256_GCM,data:AGHmh4uhFLNTMZ9dzM5q1og4op0aKTfoaMIy1N28g3TseV7Y1cZFVd7M/xDh9VS4zaMEbFTmyZ/u1+IhTBDiwQ==,iv:kSgcYtLSfArs6kw4kIXHmjedXSTlfTstu68S9MjkGjI=,tag:GVxctxl9cVWfAuXw440MLw==,type:comment]
-    #ENC[AES256_GCM,data:mgvf5hPhdn5TOhJl2T8jzs/Xxq7fQRgI6DUyyXyEsWouMYqMH9WWxZOYzw2/8W9HDq17SMNlBmM=,iv:F9evPiB/pvRufKuwoOvZLwsUpIB2UjQ9FccD1exqC94=,tag:A0kUXR8BgIc/vB/BJsJ5sQ==,type:comment]
-    #ENC[AES256_GCM,data:q7livAFGjNG7Sa7DG2dwQwPulRZbhO4VFQ==,iv:xX7zNHgw8RjOnNr+pXj8zR164tx9eLTkv6Dp+iVjhMY=,tag:99Duqiwg5lQbqJj4zm5TjA==,type:comment]
-    #ENC[AES256_GCM,data:LRwCc+jRLksOjCaZhxA9lB1pRIxOMAge0plUybgyC2hvL4u7+JY/VOfXR9ocwQsmE6dXQ6/PGzamJ4TZJSGVzqQxYJbN18pGnSvZXdU=,iv:QwKJylhZTk3xJXyZzQln+j9VMZWEVW+Z2RbF+O+AIEs=,tag:rUbiXUmNpqRoLZaA2hCAWQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:8UDUh021mMgyrI4WAbWmcIMVs0cv4HKaia/bz4ybpidHTS3rEYkYrzcVRLMXSByv,iv:bemgZc4rMDp2rbl95HqRQOzcedoD1ztGmeONKMXWyXU=,tag:4Bof2XcBpAIcQsLCef1V4A==,type:str]
-    #ENC[AES256_GCM,data:wS/mVWX5xZ4xANut/5VtBb3v9nDrhptZhXhhR20K7s3dX7Hv+VR22evMgDlgxLSGh6q3R/2igqJ9Any93ZnIcXoU/ls1Td8=,iv:9MWDyDx4CY651ZdDghaszHm8n9DLliYuEVl4/xC1beM=,tag:/a6zf99DjuAze86BL6qHyg==,type:comment]
-    #ENC[AES256_GCM,data:O86We+JNYFHHDhYvc5KHp6nSOKJ1dM+iYgOwYDN22LOu1+D4Mku1NIIoe3XPO5ItyqKRaNhm,iv:Q80bGku7p8FmFGYF4e8gg3yw7jVOX4obnCXIzKPjioM=,tag:IlY8RXE8phRmE11ys1CJ6g==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:DUQK7Y6dKw==,iv:vJKlTOMWHZUo3oNkTZqFrEwi7ngNbPU7yntVzB/36MA=,tag:HUhd5NUMwVARfThCqhWlLw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:J9APS/N7LBRQFLDduqCcBVJs+Hw=,iv:cLLDYCOnk+CfjznazZWeBZyLE3vfQnlmfwdnRiO3z/Q=,tag:FclIBkorsYqC6SNRY3rAlA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:xHbOCIuut0S6sD0=,iv:+lbzDj01dkQl8t+Ruylmnlck+iIwIdMudXI+sXJzR38=,tag:oSUjsHM1ySn1MhJUU5/amQ==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:R6glIe8qaxzk1dJRUwYT,iv:Xem8TCWX3TQOAPpFOkf0j+w9Ees7f8EoRHgko2Ag6t0=,tag:IBR2Ce0K8UznzmTyaYDkCQ==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:VGWdZKBNf48tAkUZLIe/ZyLDaYEe0gEzxA==,iv:qMU+VvSSsvRpesECi8LkbWZOkBdOT7U3727DIEOd/0Y=,tag:x4HTuqIjCXG0bN/OtYHSyw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:ru4WMtqfLdvFDdWUMvMAuMvpiN8bJjEl,iv:nu85IbP6O2N86MFUC12snrSEaDBuFbWSQhpuUKTjO6I=,tag:h3iPGnP3bWljOzWU0BvVVw==,type:str]
-    #ENC[AES256_GCM,data:Om9Q1y5vZvEY7oZ/M3E=,iv:/U00NuQG3hRvx/5vYXuKCsQi8ItUVr7w+MhW316/iic=,tag:pRKgo8eWoC61iGci6CqaTw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:20SBg0P/J1Fw2PBI0w==,iv:P2GNCNn3QTcBHZIkhrJvSpYFiTYMxzL8mtBPmLgnNpE=,tag:hYqKYN+g/81L9YfqkSesVg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:Nj9ll2Z8pCacjvjx5g==,iv:2RoJePGRd7HGPfsCjzKkb5a1asKPExsuCa37HC0QPj4=,tag:jJbf2+mnXexni8wA2xliJA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:kOkS0w==,iv:zoc6MB3/4vxXvOPApV9rHtkZPyUcFToclt0N16zEGc0=,tag:lRzmWgHxJhR3OmjFHG8i4Q==,type:str]
+    #ENC[AES256_GCM,data:27hsXspPtHpIehhIpvdlcFYO2IYUCHZDkx5K9d8wLDQhiQozWwKkKGMrJiaDKkvOLMOkQ8uX1ar4LuxsFkgDKKg=,iv:Mlmx4/AC1Q/oITccmyVDQWDkvHsvR0E6U1FGpAaZoT0=,tag:dnQmOx9LIsByTH9gUdMuSw==,type:comment]
+    #ENC[AES256_GCM,data:Wztt56EPb0lft7EXJ0dfT822OaDF2MvmnLLF/jJ5zoGdIG1HA/8Z9xBXQV0=,iv:HlBRJdpZ8C+cQ8DPANc4w2iAAUfoBM+vvIxjg7FqGQ0=,tag:WCMw6FeDUvbid+lF8HPgQw==,type:comment]
+    VIP: ENC[AES256_GCM,data:yjt0rKcfN+NSgPLfiw==,iv:JcRy4rcN0GPhxiPbR+EkfVAhRYCLNNk2d0jkrB14Fok=,tag:py/sVNYePK/0lOeqG0ukYQ==,type:str]
+    #ENC[AES256_GCM,data:+QkxeibbhfE2C1pgOdM0pRIpA86Hea1Fx8HE,iv:6iT2tns6Z5rqPhcFegZD/I511Q/TlzO+FrO6p0ow9S0=,tag:cNSpsI2UJpCVFHUOyJUnWw==,type:comment]
+    #ENC[AES256_GCM,data:ypuCnNzDgwdm/g3IkHBrDs93Y0rnWR75Yov7n7k7xAF9Y9LeBoZHO001IOspDk0EoQ+TcavOkZH+Z3hy5Ix9mLIXDprXaocuCNc51W+92hcaSmlEGLQ2bbA=,iv:48a49rUAaFwuW6rMOX6rRFRHAqi0rakI9dFmVCeAJIU=,tag:o7gVOrWmZrNszoL5BS26Ig==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:ZuY0s+e2cIqz0v/N8nc=,iv:/cmsQnlGVMBd+CGQeLg9RTh/lyBwX1MU+0LjH8ykhw0=,tag:JoGxgjsSOmk0VA5cclB4LA==,type:str]
+    #ENC[AES256_GCM,data:dkTw9tqMN1u9Vld2U1nDxKLuUYSFWKBJ38hw9tuJwPGaQw==,iv:JfAVdvV2BKjS3tLK/BM8xrYCOeV8nFRXpqsW6VRQWLs=,tag:WVGMCoLQlaAvalSBfis0lA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:KEHoautHcZ7VXgw0lQ==,iv:BS68cF4ujhpujK/7nRgs/VbOqW5s97OfogQk+7NvDaI=,tag:qONiPniVWpOUDuXY/dltGg==,type:str]
+    #ENC[AES256_GCM,data:vn5xi/4bA4J/eFZ1gBKgMGD88Ld43gqusppsQf7OCCaYwlPh89bPGCvz1VZUVxo=,iv:oK0T4djvHRCyF/AFypZxrsBbd35SWGlQMVmHunrCsOY=,tag:3fcbhgR7jDAKXQuZQw61YA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:1bnMo/5lrop7Z39cG1B5lRFWhHhvbWRewPhFgrqR4Q==,iv:1vr2PCfE8LvbrMqd57b/yhHVhrOfhYMbTbTWVuX3UbE=,tag:D5ObDqsTJnfWiOXCdchJsg==,type:str]
+    #ENC[AES256_GCM,data:glz9ZbKaQVwOqa1PDP5pU5yKSFnqlaue5MkVn3VcOp6RUvVtg77syQ4pnXMOEMTmAaGdmLIk2J4nA7xFnrdNmMfuZ0/ADuxdlQXFbxl+jB/Itw==,iv:rfpdLn19p4L02/w45pzNATzx/1VbJxRhArsFY51Ye1U=,tag:ih2157+K7Je49JxqmyEX8g==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:A7KIBanFgfxNRk5+YTWM,iv:aWmb5vwCbts9HJewM1Wq7x1uWGS5NlFEBOLsuGtTPhY=,tag:80QV1KykyshGJ+PcntCkVg==,type:str]
+    #ENC[AES256_GCM,data:vHIjIgev3RzVWXrvF6vbfr+nqsilQls36oALslwGIVC0,iv:4pFojh9OHmUoUXg7wV2n+rl6QxxMq5k75bpYCWY7Gt0=,tag:dKMpE79MzkLZzM6UUQvUQg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:WqPCRiLRxheUeChZhzZU,iv:SjH1ATwHFLOZvCn0C1hrGJOKEAXUrfo//kIyMLmrf0Q=,tag:EJlJJU9RTEEzDwencBBxYA==,type:str]
+    #ENC[AES256_GCM,data:2Xx7bEZj9eCfr42uqrTT79wZsyYC6fRBnaqTvcpBfpfEtSYRjMiSBTx1ROzv8Q2eXe7WRUeB35Q1AJts00z6j6qU8Wv2hxyDc8K6zViteKQ=,iv:yOvle9FKwdJSTO6DDlJoQQ+0ijzX8OlAWbTpxF8TEKg=,tag:v9qI1N48hY3SRtWs+1rw0A==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:2bV+G6re3J92zgGZ2dTg,iv:UjxUvzPZhtjnW6ar+R7OCkf9XvVZlNORKy4mNLes5YQ=,tag:D07a08/WP1XsYsDBB9YtUA==,type:str]
+    #ENC[AES256_GCM,data:2nmijIwcmP2FmCqI/dePBrvGYbU75Tz+l4TLSdxGZVvpQeyAeqLe7QkFGWDH6WUw2eY3uMQn+Bl6webgRGyY8IBJONsD5lh1HTn83vL+ZOW7106dnboV,iv:/mn+9qE1URBWo+4Gnlei9xG3tHprYojZ3pSEH682oA4=,tag:eMxaFM6MGZKNotZ6Vtq06A==,type:comment]
+    #ENC[AES256_GCM,data:gJs1vn8uyBluMSQJAABUYCw+71JdwY2yyLg+2r6BNMve9MUCBgoSKrOqN6L2HcNoaxEaSyLXX5e9l49D1XLLwel7IRlon1IOv0l3hAOgPSoqfGjxwy/gJtyhzAktXbNey0y+djNOKQ8KMe9dQtapzwUY1sstVoLzk3XWSA==,iv:/mrLmxU5KgEFagp4oSrwUKXznLkdiAIb24csQBGInmE=,tag:Lil7TyOqdlZnkm9nl9CSow==,type:comment]
+    #ENC[AES256_GCM,data:OVgTjcJ3qk8cgHurth92EAYIsDy/cz2rsXpEHze2obbljlIJcVBFxXB6qTCSeBVdYADX/wv1jnlETr9+AB133UEahgWQuVoeI0NG7UTCyXg=,iv:yLt6Eq5/g74UUePr5j1YI4vkbQZB0vZJ8g8lgdIJPFQ=,tag:7NhHNB4TVbDFYOkVKl4nDQ==,type:comment]
+    #ENC[AES256_GCM,data:UMv9pp2jtto1pkpX/swU6c7WMiNz0lIwWFz92z/8WbmMfpz6jTV5zyVF+rWQFOV1DTvwR8H7,iv:LV1NaDW27NRg3LrT5oGz0Up+8JAxi/RbzfUR7CbZoFw=,tag:1j5Osb0LxNW+G2F+oA7zXg==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:C04zeOx8/5sNFIIh,iv:zcD7qtwDbgxzyYZnvo4gu6izxuIpQ1h1gWfZVS5VuI4=,tag:fbZ/qT0BNFKrsw+PLGa0YA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:pxmjjWDRfMfPcvgQxWkIyoM=,iv:+ZpXoMsUleBO+LBebnYh09ycyxyOZkP7jXJTaHOhRnE=,tag:j7R/ryHgLvwhS6zk06xrDQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:hl+tmDgDTAIrmIL1TLpfQrMhu2heMDYA8zmqYl1UqZ4=,iv:pSrmd9h48jAxbmub3nidzmBxdfgsqmw8aVZ67bgzPEc=,tag:wa/oefKMxqYWpCZpK8iqYw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6UpFI1pNks33GghtHsWvcseknfewxwYow0JDcAjzxw6DN65oTqxBxA==,iv:twULx+tAkxCFLwNmzMDoHXMuR8M8bKfuppx5wH40ylU=,tag:fHUkJbbZBA9JHvtfBMAnPg==,type:str]
+    #ENC[AES256_GCM,data:+OWE5FKrtzuWgvTLXVNob7HwU//tHNcEWEwQwqYLfRCNmXcWXtURsZEQQXfCozGh3TdJzxYNiBKItWOJ1geK/A==,iv:gtxDy8xYrp+QF1TLRC9EAmByW5ppuumznrUkmgrJqtg=,tag:PQJB4x2fQv6iYMl3UzWRnA==,type:comment]
+    #ENC[AES256_GCM,data:542b8rNov8MCfb7X0PcInYEyRIrAWtKXPC2ZIhbiPIpRnMl0kFs4KeZYrJLY17Q0/GipE6kaug0=,iv:60Pisq8Q/grPvE9vjyCSlty9VAo8YJjgICz+3hC6Wiw=,tag:7yLxQm7HlN7RxSSj/1IruA==,type:comment]
+    #ENC[AES256_GCM,data:vVemXhmZDGZCDhxivpbvIBjIhH0p6lgTsA==,iv:rROFB0BJL/6jhTQALlqDDVlWt3L5WfeiPV6u9m+t16U=,tag:rvJtdGUh2PPWvD4LC2aSYA==,type:comment]
+    #ENC[AES256_GCM,data:zNqTwKYSd/qrTLencw3UNdQuLpL4r+RtgBMqv9R6K19/PcpjAWatP/+LUrqUI9VMs1xeFbnttrGg3RJPIXSTkPWbA5I6dQX9LTGXFCA=,iv:PMfkwqU2ABhxznD6Ka/YQFmgTqzmFUbB/Pj7pGK9f8c=,tag:FkogHHiXYGbzfM1A/Ruf6Q==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:/g4Ob+LW4ZAZOQVicNd9K2yTRX/tlz5bI9sGdzXGrmoOPVlU0yjQC13cNDqnACAv,iv:NzeeETj3h6yIHb9O+p95kyINsYMGoDGhn/LrV8LkVD8=,tag:EIILUT/012d+60DvAhI0Lg==,type:str]
+    #ENC[AES256_GCM,data:cCr19LXkNQvceWAnmLtlv25f/a8s3ygktoZACvcyUUlWK65QAJYKCrtLiVTHkBWLf4jM3YKwkRWcqnY+nbg293Y1SCZLhh4=,iv:7Mv5jAdKwwT6no3nl2mHiQbmPKXlFFig2Fe/YTINreQ=,tag:v2URGIbeh+M04/PHdeqCuA==,type:comment]
+    #ENC[AES256_GCM,data:u+VdAek9waBGInCy2cu2hxFwQmpO/MylieJiqrjwFFO9VUHqWrpFv7oWLsgSG6ypLzZnKoXH,iv:OGNygKmQOdECMtcz1lEO1mNryGjgBuEyNvywpj/hkxQ=,tag:fpq2YGqDiGogB+735dTvug==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:coxDjM+1kA==,iv:u1Fu9UHHyWNUE1tDB9oDNUiFWx7Gk6lyj+dfwGAsYA8=,tag:jGzwphdlpr53/2pTz1Pwfg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:neIUcmd8V7UEoYXbBxf1IQPCT+Y=,iv:xJcx0WCzBP3lBT7xjypkYOGfikS/C7lx6jrWH6WNAj4=,tag:YsomXDNcxn4HzhOPXzvimg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:DnFEEWUMbRhpr54=,iv:WpBTavzYDjWJjGg1HYOpb3youqkJVfDQ8CuWXFBwS54=,tag:bMQV3T3i/FIjYFiMWA793A==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:YJppPBUeZMDY9oGnpg2i,iv:HkQ1iEF5kP8nos2DFrwry7nismMl5hwjMcohqNZ31Vg=,tag:IX151XiwTyLfAi15mXcC7g==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:DHB3NtuHs5w7VoAMfiBQb3gIo6WcIOO7Bw==,iv:Xwrq8A809hWj7UhuPeZyeK+a6RLHG4M7JHqthuDzQgI=,tag:FPePumZY+XB5Is2v7xRzww==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:cDoHUe55NuvG3HmEvOpqBFTNsvloEBmT,iv:X8bmAPyqGX0k7JDXah89coywdh1BnExVz9WWJEMBpG4=,tag:XhqER9H9aOOfqcGJlYIhGg==,type:str]
+    #ENC[AES256_GCM,data:QOZxJbokSrDcF4DEmUk=,iv:M/Rexc1OqayfG3ihgOfIhhh7XvpUU3sqdBZALbIbHig=,tag:W1neottOe0MAeyxmFNLy8g==,type:comment]
+    PODNET: ENC[AES256_GCM,data:OVOuWiMIaROZJxWvNw==,iv:AZ2gTuqgO5HG/XodPy8AIUjKacBJ7+B1o75H2gIyAyk=,tag:Z30okLaCz7s92LRDIxg6ZQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:i7b9DWPDxRBxKcqu6g==,iv:P/J3Tz+rVNuTq/6AAV/klI5BAEJYH9nxxua7hi8DiNI=,tag:nlMEb3Nbn/ut2342vdaUCg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:jZi2bg==,iv:3peNWxM8UxHGKlybxSliFYRth5G/nP/xUJCa0b+61g8=,tag:yf6ObdQXpWjKQBsqQFWvzQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -55,14 +55,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMbjhpNUdGKzlkNVVGeUpK
-            Yk9iQUtydHpJaHpmVWdSNGwzOXVzcmgxU0RrCjRlYmxKdVloZUZLODRsOGxoSjcw
-            Rmoxa280MkFPUUZMWWVNRmZxb20vKzAKLS0tIDMvL2trMmxWMXhqcjJKODllRTNj
-            RDIxQzNWbUtyaEk0VGcrZm1mZDVCZ3cKhiHOphK5suDJNF7F8cvQDDP2DS3j0xd0
-            n/JJ1p+oLC4rWO0sXXAPQaBlon2ZGB6C6q7WLXFXtiP7mf7pXpwR1A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsaGtoZHU1N1Q0T2R4ZlAw
+            b2R4ZlRjUWRrbGkrNGhmT09HVnFrczZTNlJVCmdZR05mRStEb2dsekxyS1RoMDZt
+            TUxLN1J2ckordzlrdUJKZXlnSFdxUGcKLS0tIGVIYVIvV2ZkQnUxYUQ3ZFppOU81
+            MGluSmNqS2tVekZXZytOWmFQQWQ0MEUKv4kPZOxUsBnIZSngavaZB5cnE1MJF7Cd
+            exH1Zx9nzL7XTbVoWZgPLvDXJQeXLHWJwQ/euK1EZj+m4ynvXGGhDg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-08T22:38:18Z"
-    mac: ENC[AES256_GCM,data:UfyeSPxS8A1MUBOHwtFe0PBDP93i2jwTxWus4R4AHIYSmY7Pbh5m4HXlr452O2gwtij9+USa2WkDACXq9HVpYbkGe84S84cIRtCl+GVjLocxWbt0r7c5jk/kT1IFaTqn8UnAjFtd4CTcAnJ3mRAF/FIqGSRMIfgqDp/FXt6atgY=,iv:s6oWG68NZ4n4DQGKaeCIhvMbOKdfZrEk/kwFm3wDzyY=,tag:rb3cnbaSkZnWgrd9O/9ejg==,type:str]
+    lastmodified: "2025-01-08T23:02:40Z"
+    mac: ENC[AES256_GCM,data:K9/0Gnzh5G8mwzy6wTQUjAjx6FI0ujYac2rqxGP5BWRXNyTUKs+U1SJGFIXgT4gy4Qcj2Ss1V1htW/32QpMGRsO+R9HoB6LA22ZlV9dc86AJOiw7+wIrS8TQmhU+XPww0KGXIpGiw/+CzzI/x9PeEiLEcRv/1/K/XEEb1l8AhhM=,iv:nJbcIHD3sjNVwj9WQFncyqhAp4mbtCOGT3bSyqRV5P8=,tag:J7jVj7vuo4CleE+sZckJpg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
